--- a/CarPoolApi/CarPoolApi/CarPoolApi.csproj
+++ b/CarPoolApi/CarPoolApi/CarPoolApi.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.42.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="6.0.33" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,10 +29,10 @@
     <None Remove="Application\Services\" />
     <None Remove="Infrastructure\Repositories\" />
     <None Remove="Infrastructure\Repositories\Implementations\" />
-    <None Remove="Infrastructure\Services\" />
-    <None Remove="Infrastructure\Services\Implementations\" />
     <None Remove="API\Controllers\" />
     <None Remove="API\Models\" />
+    <None Remove="Utils\" />
+    <None Remove="Utils\Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Core\" />
@@ -43,9 +45,9 @@
     <Folder Include="Application\Services\" />
     <Folder Include="Infrastructure\Repositories\" />
     <Folder Include="Infrastructure\Repositories\Implementations\" />
-    <Folder Include="Infrastructure\Services\" />
-    <Folder Include="Infrastructure\Services\Implementations\" />
     <Folder Include="API\Controllers\" />
     <Folder Include="API\Models\" />
+    <Folder Include="Utils\" />
+    <Folder Include="Utils\Helpers\" />
   </ItemGroup>
 </Project>
