--- a/CarPoolApi/CarPoolApi/.gitignore
+++ b/CarPoolApi/CarPoolApi/.gitignore
@@ -76,6 +76,7 @@ appsettings.Local.json
 appsettings.Production.json
 appsettings.Staging.json
 appsettings.Test.json
+appsettings.json
 
 # Ignore published files
 publish/
