Added Blob Storage integration for document uploads

--- a/CarPoolApi/CarPoolApi/appsettings.json
+++ b/CarPoolApi/CarPoolApi/appsettings.json
@@ -9,5 +9,9 @@
   "Jwt": {
     "Issuer": "UniPool",
     "Audience": "Users"
+  },
+  "AzureBlobStorage": {
+    "ConnectionString": "Your_Connection_String_Here",
+    "ContainerName": "your-container-name"
   }
 }
